--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   </head>
   <body>
     <div id="mainTitle" class="jumbotron jumbotron-fluid"></div>
-    <br>
-    <br>
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6">
@@ -23,6 +22,7 @@
               <img id="image" src="assets/images/FriendsOpening.gif" alt="Friends TV Show">
           </div>
         </div>
+        
         <div class="col-md-6">
           <div class="game-play">
               <p>Press Any Key to Get Started!</p>
@@ -39,6 +39,12 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div>
+      <audio id="themeSong">
+        <source src="assets/audio/friendsThemeSong.mp3" type="audio/mp3">
+      </audio>
     </div>
 
     <script src="assets/javascript/game.js"></script>
