--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         
         <div class="col-md-6">
-          <div class="game-play">
+          <div class="gamePlay">
               <p>Press Any Key to Get Started!</p>
               <p>Current Word:</p>
               <p id="currentWord"></p>
